Barber Site Final 2

--- a/index.html
+++ b/index.html
@@ -176,12 +176,11 @@
         style="background-image: url('./assets/images/hero-banner.jpg')">
         <div class="container">
 
-          <h1 class="h1 hero-title">Barbers & Hair Cutting</h1>
+          <!-- <h1 class="h1 hero-title">Barbers & Hair Cutting</h1> -->
+          <h1 class="h1 hero-title">حجام <br /> اور <br> بال کاٹنا</h1>
 
           <p class="hero-text">
-            Sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-            suspendisse
-            ultrices gravida
+            ہماری دکان پر درست کٹوتیوں اور لازوال گرومنگ کے ساتھ اسٹائل میں قدم رکھیں - جہاں ہر بال ایک کہانی سناتے ہیں۔
           </p>
 
           <a href="#" class="btn has-before">
